# audio_processing

./: .gitignore  README.md  apply_filters_audio.ipynb  audio_anomaly_detection_using_IsolationForest.py  audio_classification_beginner.ipynb  fade_in_fade_out_effects.ipynb  fade_in_fade_out_effects_audio.ipynb  machine_sound_anomaly_detection.ipynb  main.py  pyproject.toml  simple_audio_processing.ipynb
